--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
   "npmScope": "vivid-theory",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
   },
   "cli": {
     "defaultCollection": "@nrwl/react"
