--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nx run-many --target=serve --all --parallel=3",
     "build": "nx run-many --target=build --all --parallel=3",
-    "test": "nx test"
+    "test": "nx run-many --target=test --all --parallel=3"
   },
   "private": true,
   "dependencies": {
@@ -60,6 +60,7 @@
     "nx": "14.0.5",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.0.0",
+    "sequelize-cli": "^6.4.1",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
