--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "react": "18.0.0",
@@ -38,11 +39,13 @@
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "16.11.7",
     "@types/react": "18.0.1",
     "@types/react-dom": "18.0.0",
     "@types/react-is": "17.0.3",
     "@types/styled-components": "5.1.25",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
@@ -61,6 +64,7 @@
     "prettier": "^2.6.2",
     "react-test-renderer": "18.0.0",
     "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.3",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
