--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,13 +16,13 @@
     "baseUrl": ".",
     "paths": {
       "@vivid-theory/api-interfaces": [
-        "libs/api-interfaces/src/index.ts"
+        "libs/api-interfaces/src"
       ],
       "@vivid-theory/database": [
-        "libs/database/src/index.ts"
+        "dist/libs/database/src"
       ],
       "@vivid-theory/models": [
-        "libs/database/src/lib/models/index.ts"
+        "dist/libs/database/src/lib/models"
       ]
     }
   },
