--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev:api": "nx serve api",
         "dev:smarthomes": "nx run-many --target=serve --projects=smarthomes-app,api",
         "build": "nx run-many --target=build --all --parallel=3",
+        "build:production": "bash ./production.sh",
         "start": "node dist/apps/api/main.js",
         "test": "nx run-many --target=test --all --parallel=3"
     },
