--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,12 @@ on:
 
 env:
   NX_CLOUD_DISTRIBUTED_EXECUTION: true
+  DB_HOST: ${{secrets.DB_HOST}}
+  DB_PORT: ${{secrets.DB_PORT}}
+  DB_USER: ${{secrets.DB_USER}}
+  DB_PASS: ${{secrets.DB_PASS}}
+  DB_NAME: ${{secrets.DB_NAME}}
+  DB_TYPE: ${{secrets.DB_TYPE}}
 
 jobs:
   main:
