--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     },
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.6.4",
         "core-js": "^3.6.5",
         "dotenv": "^16.0.0",
         "express": "4.17.2",
@@ -21,6 +24,7 @@
         "react": "18.0.0",
         "react-dom": "18.0.0",
         "react-is": "18.0.0",
+        "react-router-dom": "6.3.0",
         "reflect-metadata": "^0.1.13",
         "regenerator-runtime": "0.13.7",
         "sequelize": "^6.19.0",
@@ -48,6 +52,7 @@
         "@types/react": "18.0.1",
         "@types/react-dom": "18.0.0",
         "@types/react-is": "17.0.3",
+        "@types/react-router-dom": "5.3.3",
         "@types/styled-components": "5.1.25",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "~5.18.0",
