--- a/libs/ui-components/tsconfig.spec.json
+++ b/libs/ui-components/tsconfig.spec.json
@@ -3,10 +3,7 @@
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
         "module": "commonjs",
-        "types": [
-            "jest",
-            "node"
-        ]
+        "types": ["jest", "node"]
     },
     "include": [
         "jest.config.ts",
@@ -19,4 +16,5 @@
         "**/*.test.jsx",
         "**/*.spec.jsx",
         "**/*.d.ts"
-    }
+    ]
+}
