--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@mui/material": "^5.6.4",
+        "chart.js": "^3.7.1",
         "core-js": "^3.6.5",
         "dotenv": "^16.0.0",
         "express": "4.17.2",
@@ -22,6 +23,7 @@
         "pg": "^8.7.3",
         "pg-hstore": "^2.3.4",
         "react": "18.0.0",
+        "react-chartjs-2": "^4.1.0",
         "react-dom": "18.0.0",
         "react-is": "18.0.0",
         "react-router-dom": "6.3.0",
