--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "@emotion/styled": "^11.8.1",
         "@mui/material": "^5.6.4",
         "chart.js": "^3.7.1",
+        "chartjs-adapter-date-fns": "^2.0.0",
         "core-js": "^3.6.5",
+        "date-fns": "^2.28.0",
         "dotenv": "^16.0.0",
         "express": "4.17.2",
         "morgan": "^1.10.0",
