Refactored helper functions into shared library
- Expanded base container from default maxWidth of 'lg' to 'xl'

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,9 @@
             ],
             "@vivid-theory/ui": [
                 "libs/ui-components/src/index.ts"
+            ],
+            "@vivid-theory/ui/functions": [
+                "libs/ui-components/src/lib/functions.ts"
             ]
         }
     },
